namespaces/live.cloud-platform.service.justice.gov.uk/raise-an-incident-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: raise-an-incident-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "product_support_team"
    cloud-platform.justice.gov.uk/application: "raise an incident"
    cloud-platform.justice.gov.uk/owner: "DPS Product Support: product-support-team@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/raise-an-incident"
    cloud-platform.justice.gov.uk/team-name: "product-support"
    cloud-platform.justice.gov.uk/review-after: ""
